Fix borders and spacing

--- a/html-css-javascript-for-web-developers/module-2/css/application.css
+++ b/html-css-javascript-for-web-developers/module-2/css/application.css
@@ -26,11 +26,11 @@ h1 {
 
 .recipe {
   background-color: #999;
-  border: 3px solid #000;
+  border: 2px solid #000;
 }
 
 .title {
-  border: 2px solid #000;
+  border: 1px solid #000;
   border-top: none;
   border-right: none;
   display: inline-block;
@@ -57,7 +57,8 @@ h1 {
 
 .description {
   clear: both;
-  padding: 3%;
+  padding: 3% 3% 1.5% 3%;
+  margin: 0
 }
 
 @media (min-width: 992px) {
@@ -87,7 +88,7 @@ h1 {
     width: 100%;
   }
 
-  .description {
+  .recipe:last-child .description {
     clear: both;
     padding: 1.5%;
   }
